# ili9341_controller

./: .gitignore  CMakeLists.txt  Makefile  README.md  install_prereqs.sh  install_synthesis.sh  top.pcf
fpga/: ili9341_controller.xpr  vivado.jou  vivado_13288.backup.jou  vivado_pid1264.str
fpga/ili9341_controller.cache/sim/: ssm.db
lattice_fpga/: CMakeLists.txt  Makefile  README.md  top.pcf
pcb/: MI0283QT-11.kicad_sym  XTAL_ABLS2-12.000MHZ-D4Y-T.kicad_mod  fp-lib-table  ili9341_controller.kicad_pcb  ili9341_controller.kicad_prl  ili9341_controller.kicad_pro  ili9341_controller.kicad_sch  sym-lib-table
pcb/ili9341_controller/: #auto_saved_files#  ICE40HX1K-VQ100.bak  ICE40HX1K-VQ100.kicad_sym  MI0283QT-11.kicad_sym  RP2040.kicad_sym  ili9341_controller.kicad_pcb  ili9341_controller.kicad_pro  ili9341_controller.kicad_sch  sym-lib-table
pico/: CMakeLists.txt  fpga_interface.h  main.c  tft_interface.h
src/game/: game_main.h  smiley_sprite.h
src/graphics_lib/: general_functions.h  spi_transfer.h  sprites.h  tft_pixel.h
src/pico/: fpga_config.h  main.c  main.cpp  pico_general_functions.cpp
src/util/: image_to_sprite.py  out.h
src/verilator/: clock_handler.h  general_functions.cpp  main.cpp  spi_sim.h  spi_transfer.cpp  sprites.h  tft_sim.h  verilator_general_functions.cpp
src/verilog/: addr_chained_bram.v  counter.v  counter_2d.v  dotclk_pll.v  ice40_bram.v  ice40_spram.v  ili9341_controller.v  register_fifo.v  spi_fifo.v  spi_input.v  spi_video_memory.v  top.v
verilator_sim/: clock_handler.h  main.c  main.cpp  main_sim.c  main_sim.cpp
(+215 files in other folders)
